# ecsact_cli

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE.bazel  ecsact_cli.cc  test_script.nu
.github/workflows/: main.yml  release.yml
bazel/: common.bazelrc
bazel/tools/: BUILD.bazel  cc_stamp_header.bzl  cc_stamp_header_generator.cc  wsc.cmd  wsc.sh
commands/: BUILD.bazel  benchmark.cc  build.cc  build.hh  codegen.cc
ecsact/cli/: BUILD.bazel  ecsact_cli.cc  report.cc  report.hh  report_message.hh
ecsact/cli/commands/: BUILD.bazel  benchmark.cc  benchmark.hh  build.cc  build.hh  codegen.cc  codegen.hh  command.hh  common.cc  common.hh  config.cc  config.hh  recipe-bundle.cc  recipe-bundle.hh
ecsact/cli/commands/codegen/: BUILD.bazel  codegen.cc  codegen.hh  codegen_util.cc  codegen_util.hh
ecsact/cli/commands/recipe-bundle/: BUILD.bazel  build_recipe_bundle.cc  build_recipe_bundle.hh
ecsact/cli/detail/: BUILD.bazel  archive.cc  archive.hh  argv0.cc  argv0.hh  download.cc  download.hh  glob.cc  glob.hh  json_report.cc  json_report.hh  long_path_workaround.cc  long_path_workaround.hh  proc_exec.cc  proc_exec.hh  report_proc_output.hh  text_report.cc  text_report.hh
ecsact/cli/detail/executable_path/: BUILD.bazel
schema/: ecsact-build-recipe.schema.json
test/: .bazelrc  BUILD.bazel  MODULE.bazel  test.ecsact  test_codegen.cc  test_codegen_multi_output.cc  test_codegen_plugin.cc  test_codegen_plugin_multi_output.cc  test_codegen_print_outputs.cc  test_codegen_stdout.cc
test/build_recipe/: BUILD.bazel  ecsact_build_test.cc  ecsact_build_test_merge.cc  ecsact_build_test_recipe.yml  example-recipe.yml  local_dep.cc  local_dep.hh  test-merge-recipe.yml  test-recipe.yml  test.ecsact  test.nu  test_build_recipe.cc  test_build_recipe_bundle.cc
test/misc/: BUILD.bazel  glob_test.cc
tests/: BUILD.bazel  ecsact_build_test.cc  ecsact_build_test_recipe.yml  test.ecsact
