load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_ecsact//ecsact:toolchain.bzl", "ecsact_toolchain")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//:__subpackages__"])

bool_flag(name = "use_sdk_version", build_setting_default = False)
config_setting(name = "use_sdk_version_enabled", flag_values = {":use_sdk_version": "true"})
config_setting(name = "use_sdk_version_disabled", flag_values = {":use_sdk_version": "false"})

alias(
    name = "ecsact_cli",
    visibility = ["//visibility:public"],
    actual = "//ecsact/cli:ecsact",
)

ecsact_toolchain(
    name = "ecsact_toolchain",
    visibility = ["//visibility:public"],
    target_tool = ":ecsact",
)

toolchain(
    name = "toolchain",
    visibility = ["//visibility:public"],
    toolchain = ":ecsact_toolchain",
    toolchain_type = "@rules_ecsact//ecsact:toolchain_type",
)
