load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "rules_cc_stamp",
    strip_prefix = "rules_cc_stamp-2f8b52eae4e7e52c3f5573d79db37eaac296289e",
    urls = ["https://github.com/zaucy/rules_cc_stamp/archive/2f8b52eae4e7e52c3f5573d79db37eaac296289e.zip"],
    sha256 = "8ed2f5ee3576958339568847cd54ed981f39acf610b7ded3c5eb5582e6ab7d00",
)

http_archive(
    name = "ecsact_si_wasm",
    sha256 = "e208a94d4f4a9c09f32b8a9ea91a4f799492e11c7c852b0329b4a3595a45cee6",
    strip_prefix = "ecsact_si_wasm-0.1.0",
    urls = ["https://github.com/seaube/ecsact_si_wasm/archive/refs/tags/0.1.0.tar.gz"],
)

http_archive(
    name = "hedron_compile_commands",
    sha256 = "ed5aea1dc87856aa2029cb6940a51511557c5cac3dbbcb05a4abd989862c36b4",
    strip_prefix = "bazel-compile-commands-extractor-e16062717d9b098c3c2ac95717d2b3e661c50608",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/e16062717d9b098c3c2ac95717d2b3e661c50608.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()

http_archive(
    name = "com_grail_bazel_toolchain",
    sha256 = "33ba2951db87fc2ebdb609b489b84dcd77f417ad2b2ab9d0f469835e991dab11",
    strip_prefix = "bazel-toolchain-885e6926f235dbd0fbde2055f5763cb762d8c0ef",
    url = "https://github.com/grailbio/bazel-toolchain/archive/885e6926f235dbd0fbde2055f5763cb762d8c0ef.zip",
)

load("@com_grail_bazel_toolchain//toolchain:deps.bzl", "bazel_toolchain_dependencies")

bazel_toolchain_dependencies()

load("@com_grail_bazel_toolchain//toolchain:rules.bzl", "llvm_toolchain")

llvm_toolchain(
    name = "llvm_toolchain",
    cxx_standard = {"linux": "c++20"},
    distribution = "clang+llvm-15.0.6-x86_64-linux-gnu-ubuntu-18.04.tar.xz",
    llvm_version = "15.0.6",
)

load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")

llvm_register_toolchains()
