load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "command",
    hdrs = ["command.hh"],
    copts = copts,
)

# cc_library(
#     name = "benchmark",
#     srcs = ["benchmark.cc"],
#     hdrs = ["benchmark.hh"],
#     copts = copts,
#     deps = [
#         ":command",
#         "//executable_path",
#         "@magic_enum",
#         "@docopt.cpp//:docopt",
#         "@boost.dll",
#         "@ecsact_runtime//:core",
#         "@ecsact_runtime//:async",
#         "@ecsact_runtime//:serialize",
#         "@ecsact_si_wasm",
#         "@nlohmann_json//:json",
#     ],
# )

cc_library(
    name = "codegen",
    srcs = ["codegen.cc"],
    hdrs = ["codegen.hh"],
    copts = copts,
    deps = [
        ":command",
        "//executable_path",
        "@magic_enum",
        "@docopt.cpp//:docopt",
        "@boost.dll",
        "@ecsact_interpret",
        "@ecsact_codegen//:plugin",
        "@ecsact_codegen//:plugin_validate",
        "@ecsact_runtime//:dylib",
        "@ecsact_runtime//:meta",
    ],
)

cc_library(
    name = "config",
    srcs = ["config.cc"],
    hdrs = ["config.hh"],
    copts = copts,
    deps = [
        ":command",
        "//executable_path",
        "@docopt.cpp//:docopt",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "build",
    srcs = ["build.cc"] + glob(["build/**/*.cc", "build/**/*.hh"]),
    hdrs = ["build.hh"],
    copts = copts,
    defines = select({
        "//:use_sdk_version_enabled": ["ECSACT_CLI_USE_SDK_VERSION"],
        "//:use_sdk_version_disabled": [],
    }),
    deps = [
        ":command",
        "//:cli_report",
        "//:cli_report_message",
        "//:cli_json_report",
        "//:cli_text_report",
        "//executable_path",
        "@ecsact_interpret",
        "@docopt.cpp//:docopt",
        "@yaml-cpp",
        "@magic_enum",
        "@boost.process",
    ] + select({
        "//:use_sdk_version_enabled": [],
        "//:use_sdk_version_disabled": [
            "@bazel_tools//tools/cpp/runfiles",
        ],
    }),
    data = select({
        "//:use_sdk_version_enabled": [
        ],
        "//:use_sdk_version_disabled": [
            "@ecsact_runtime//:ecsact/lib.hh",
            "@ecsact_runtime//:ecsact/runtime.h",
            "@ecsact_runtime//:ecsact/runtime/async.h",
            "@ecsact_runtime//:ecsact/runtime/async.hh",
            "@ecsact_runtime//:ecsact/runtime/common.h",
            "@ecsact_runtime//:ecsact/runtime/core.h",
            "@ecsact_runtime//:ecsact/runtime/core.hh",
            "@ecsact_runtime//:ecsact/runtime/definitions.h",
            "@ecsact_runtime//:ecsact/runtime/dylib.h",
            "@ecsact_runtime//:ecsact/runtime/dynamic.h",
            "@ecsact_runtime//:ecsact/runtime/meta.h",
            "@ecsact_runtime//:ecsact/runtime/meta.hh",
            "@ecsact_runtime//:ecsact/runtime/serialize.h",
            "@ecsact_runtime//:ecsact/runtime/serialize.hh",
            "@ecsact_runtime//:ecsact/runtime/static.h",
        ],
    }),
)
