load("@ecsact_cli//bazel:copts.bzl", "copts")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

package(default_visibility = ["//:__subpackages__"])

cc_binary(
    name = "test_codegen_plugin",
    linkshared = True,
    copts = copts,
    srcs = [
        "test_codegen_plugin.cc",
        "@ecsact_runtime//dylib:dylib.cc",
    ],
    deps = [
        "@ecsact_codegen//:plugin",
        "@ecsact_runtime//:dylib",
        "@ecsact_runtime//dylib:meta",
        "@ecsact_runtime//dylib:util",
    ],
    defines = ["ECSACT_META_API_LOAD_AT_RUNTIME"],
)

cc_test(
    name = "test_codegen",
    copts = copts,
    srcs = ["test_codegen.cc"],
    data = [
        "@ecsact_cli",
        "test.ecsact",
        ":test_codegen_plugin",
    ],
    env = {
        "TEST_ECSACT_CLI": "$(rootpath @ecsact_cli)",
        "TEST_ECSACT_FILE_PATH": "$(rootpath test.ecsact)",
        "TEST_CODEGEN_PLUGIN_PATH": "$(rootpath :test_codegen_plugin)",
    },
    deps = [
        "@ecsact_interpret",
        "@bazel_tools//tools/cpp/runfiles",
        "@ecsact_cli//ecsact/cli/commands:codegen",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
