module(name = "ecsact_cli_test")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_ecsact", version = "0.4.9")
bazel_dep(name = "ecsact_codegen", version = "0.1.3")
bazel_dep(name = "boost.dll", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")
bazel_dep(name = "ecsact_runtime", version = "0.5.1")
bazel_dep(name = "ecsact_interpret", version = "0.5.0")
bazel_dep(name = "toolchains_llvm", version = "0.10.3")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "ecsact_cli")
bazel_dep(name = "yaml-cpp")

local_path_override(
    module_name = "ecsact_cli",
    path = "..",
)

git_override(
    module_name = "yaml-cpp",
    commit = "37f1b8b8c9e5172ff3a79a3d5fdbb87f2994842b",
    remote = "https://github.com/jbeder/yaml-cpp",
)

git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "16.0.4")

use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")
