bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_ecsact", version = "0.5.0")
bazel_dep(name = "ecsact_codegen", version = "0.4.1")
bazel_dep(name = "boost.dll", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")
bazel_dep(name = "ecsact_runtime", version = "0.6.5")

git_override(
    module_name = "libarchive",
    commit = "5593000c81d6e1ee7505e5422fa7682f3fae0830",
    remote = "https://github.com/thesayyn/bazel-central-registry.git",
)

bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "ecsact_cli")

local_path_override(
    module_name = "ecsact_cli",
    path = "..",
)

git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)
