load("@bazel_skylib//rules:native_binary.bzl", "native_test")
load("@ecsact_cli//bazel:copts.bzl", "copts")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_binary", "ecsact_build_recipe")

cc_test(
    name = "test_build_recipe",
    srcs = ["test_build_recipe.cc"],
    copts = copts,
    data = [
        "ecsact_build_test.cc",
        "test-recipe.yml",
        "//:test.ecsact",
        "//:test_codegen_plugin",
        "@ecsact_cli",
    ] + select({
        "@platforms//os:windows": [],
        "//conditions:default": [
            "@llvm_toolchain_llvm//:bin/clang",
        ],
    }),
    tags = ["no-sandbox"],
    env = select({
        "@platforms//os:windows": {
            "TEST_ECSACT_CLI": "$(rootpath @ecsact_cli)",
            "TEST_ECSACT_BUILD_RECIPE_PATH": "$(rootpath test-recipe.yml)",
            "TEST_ECSACT_FILE_PATH": "$(rootpath //:test.ecsact)",
            "TEST_CODEGEN_PLUGIN_PATH": "$(rootpath //:test_codegen_plugin)",
        },
        "//conditions:default": {
            "TEST_ECSACT_CLI": "$(rootpath @ecsact_cli)",
            "TEST_ECSACT_BUILD_RECIPE_PATH": "$(rootpath test-recipe.yml)",
            "TEST_ECSACT_FILE_PATH": "$(rootpath //:test.ecsact)",
            "TEST_CODEGEN_PLUGIN_PATH": "$(rootpath //:test_codegen_plugin)",
            "CC": "$(rootpath @llvm_toolchain_llvm//:bin/clang)",
        },
    }),
    env_inherit = select({
        "@platforms//os:windows": [
            "PATH",
            "PATHEXT",
            "PWD",
            "APPDATA",
            "ProgramData",
            "ProgramFiles",
            "ProgramFiles(x86)",
            "TEMP",
            "OS",
            "WINDIR",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "@ecsact_cli//ecsact/cli/commands:build",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
